# agentinfra-examples

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
agent-eval-pipelines/: 01-snippet.py  02-snippet.py  03-snippet.py  README.md
docs/: RELEASING.md
langfuse-vs-braintrust/: README.md
litellm-proxy-setup/: 01-snippet.txt  03-snippet.sh  04-snippet.sh  05-snippet.yaml  06-snippet.yaml  07-snippet.yaml  08-snippet.sh  09-snippet.sh  10-snippet.sh  11-snippet.sh  12-snippet.py  README.md
litellm-vs-openrouter/: README.md
production-agent-observability/: 01-snippet.py  02-snippet.py  03-snippet.yaml  README.md
tests/: conftest.py  test_examples.py
