[project]
name = "agentinfra-examples"
version = "0.1.0"
description = "Validated companion examples for production AI agent infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Michael Isaac" }]
dependencies = []

[project.optional-dependencies]
eval = [
  "anthropic>=0.116,<1",
  "langfuse>=4.14,<5",
]
observability = [
  "anthropic>=0.116,<1",
  "langfuse>=4.14,<5",
  "mypy>=1.19,<3",
  "opentelemetry-api>=1.43,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.43,<2",
  "opentelemetry-sdk>=1.43,<2",
]
proxy-client = ["openai>=2.45,<3"]

[dependency-groups]
dev = [
  "anthropic>=0.116,<1",
  "langfuse>=4.14,<5",
  "opentelemetry-api>=1.43,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.43,<2",
  "opentelemetry-sdk>=1.43,<2",
  "openai>=2.45,<3",
  "pip-audit>=2.10,<3",
  "pytest>=9.1,<10",
  "pytest-cov>=7,<8",
  "pyyaml>=6,<7",
  "ruff>=0.15,<0.16",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
